Item market value indexing added